--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <meta>
-
+   
+<head>
+    <meta charset="UTF-8">
+    <title>Mijn website.</title>
 </head>
 
 <body>
     <img src="" alt="Umut van Rossum">
-    <h1>Mijn naam is Umut van Rossum ik ben 17 jaar en ik doe Software Developer.<h1>
-    <p>Waarom heb ik dit opleiding gekozen?</p>
-    <h2>Ik heb dit opleiding gekozen, omdat het leuk leek en ik wou iets doen met ict.<h2>
-    <p>Hobby's</p>
 
+    <p>Mijn naam is Umut van Rossum ik ben 17 jaar en ik doe Software Developer.</p>
+    <p>Ik heb dit opleiding gekozen, omdat het leuk leek en ik wou iets doen met ict.</p>
+    <h2>Hobby's<h2>
+    <ul>
+        <li>gamen<li>
+        <li>voetballen<li>
+        </ul>
+    <a href="https://github.com/Umut5446/leren-programmeren">github Umut</a>
+    <li>Dit is mijn github<li>
 
 
 
