--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <img src="" alt="Umut van Rossum">
+    <img src="2022-12-14 11_44_08-OSIRIS Student Mobile.jpg" alt="Umut van Rossum">
 
     <p>Mijn naam is Umut van Rossum ik ben 17 jaar en ik doe Software Developer.</p>
     <p>Ik heb dit opleiding gekozen, omdat het leuk leek en ik wou iets doen met ict.</p>
