--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <p>Mijn naam is Umut van Rossum ik ben 17 jaar en ik doe Software Developer.</p>
     <p>Ik heb dit opleiding gekozen, omdat het leuk leek en ik wou iets doen met ict.</p>
-    <h2>Hobby's<h2>
+    <h2>Hobby's</h2>
     <ul>
         <li>gamen<li>
         <li>voetballen<li>
