--- a/html/index.html
+++ b/html/index.html
@@ -7,21 +7,16 @@
 </head>
 
 <body>
-    <img src="2022-12-14 11_44_08-OSIRIS Student Mobile.jpg" alt="Umut van Rossum">
-
-    <p>Mijn naam is Umut van Rossum ik ben 17 jaar en ik doe Software Developer.</p>
-    <p>Ik heb dit opleiding gekozen, omdat het leuk leek en ik wou iets doen met ict.</p>
-    <h2>Hobby's</h2>
-    <ul>
+    <img src="2022-12-14 11_44_08-OSIRIS Student Mobile.jpg" alt="Dit ben ik">
+        <p>Mijn naam is Umut van Rossum ik ben 17 jaar en ik doe Software Developer.</p>
+        <p>Ik heb dit opleiding gekozen, omdat het leuk leek en ik wou iets doen met ict.</p>
+        <h1>Hobby's</h1>
+        <ul>
         <li>gamen<li>
         <li>voetballen<li>
         </ul>
+        <h2>Dit is mijn github</h2>
     <a href="https://github.com/Umut5446/leren-programmeren">github Umut</a>
-    <li>Dit is mijn github<li>
-
-
-
-
-
+ 
     </body>
 </html>
