--- a/html/index.html
+++ b/html/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
-   
 <head>
     <meta charset="UTF-8">
     <title>Mijn website.</title>
 </head>
-
 <body>
     <img src="2022-12-14 11_44_08-OSIRIS Student Mobile.jpg" alt="Dit ben ik">
-        <p>Mijn naam is Umut van Rossum ik ben 17 jaar en ik doe Software Developer.</p>
-        <p>Ik heb dit opleiding gekozen, omdat het leuk leek en ik wou iets doen met ict.</p>
-        <h1>Hobby's</h1>
+
+        <h1>Mijn website</h1>
+        <h4>Mijn naam is Umut van Rossum ik ben 17 jaar en ik doe Software Developer.</h4>
+        <h4>Ik heb dit opleiding gekozen, omdat het leuk leek en ik wou iets doen met ict.</h4>
+        <h3>Hobby's</h3>
         <ul>
         <li>gamen<li>
         <li>voetballen<li>
         </ul>
         <h2>Dit is mijn github</h2>
     <a href="https://github.com/Umut5446/leren-programmeren">github Umut</a>
- 
-    </body>
+</body>
 </html>
