--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <title>Mijn website.</title>
 </head>
 <body>
-    <img src="2022-12-14 11_44_08-OSIRIS Student Mobile.jpg" alt="Dit ben ik">
+    <imgssrc="2022-12-14 11_44_08-OSIRIS Student Mobile.jpg alt="Dit ben ik">
 
         <h1>Mijn website</h1>
         <h4>Mijn naam is Umut van Rossum ik ben 17 jaar en ik doe Software Developer.</h4>
