--- a/html/voorbeeld.html
+++ b/html/voorbeeld.html
@@ -3,7 +3,7 @@
 
 <head>
     <Title>Welkom</Title>
-    <link rel="styleheet" href="style.css"
+    <link rel="styleheet" href="style.css">
     <script src="script.js"></script>
 </head>
 
@@ -12,7 +12,7 @@
     <h1>Inloggen</h1>
     </header>
     <main>
-        Naam:<input type = 
+        Naam:<input type> = 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
